fix when expend weekly lectures, calendar will shift to left

--- a/protosite/css/hmw.css
+++ b/protosite/css/hmw.css
@@ -342,6 +342,7 @@ nav > ul > li > div ul > li {
 	.right_menu{
 		float:right;
 		position:relative;
+		clear:right;
 	}
 	#search{
 		float:right;
